# TP_work1

./: README.md  tp_script1.sh
tpwork2/: CMakeLists.txt
tpwork2/A/: preparing.py
tpwork2/B/: CMakeLists.txt  lib.cpp  lib.h
tpwork2/C/: main.cpp
